# mmux-removable-media-utilities

./: Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.sh
doc/: Makefile.am  cdrom.1  floppy-disk.1  memory-card.1  mmux-removable-media-utilities.texi  pendrive.1  phone.1  removable-media-utilities.texi
meta/autoconf/: mbfl.m4
meta/slackware/: doinst.sh.in
src/: Makefile.am
src/completions/: Makefile.am  cdrom.bash  floppy-disk.bash  memory-card.bash  pendrive.bash  phone.bash
src/etc/: Makefile.am
src/etc/sudoers.d/: mmux-removable-media-utilities.conf
